--- a/src/config.json
+++ b/src/config.json
@@ -1,7 +1,7 @@
 {
     "baseURL": "https://rewards.bing.com",
     "sessionPath": "sessions",
-    "headless": false,
+    "headless": true,
     "parallel": false,
     "runOnZeroPoints": false,
     "clusters": 1,
@@ -25,8 +25,8 @@
         "scrollRandomResults": true,
         "clickRandomResults": true,
         "searchDelay": {
-            "min": "3min",
-            "max": "5min"
+            "min": "2min",
+            "max": "3min"
         },
         "retryMobileSearchAmount": 2
     },
